# mesti-mem

./: Cargo.toml  README.md  install.sh  readme.md
binary/: matis-mem-final-binary
src/: config.rs  error.rs  main.rs  platform.rs
src/context/: builder.rs  mod.rs
src/data/: agent_log.rs  knowledge.rs  mod.rs  project.rs  session.rs
src/executor/: amp.rs  claude.rs  gemini.rs  generic.rs  mistral.rs  mod.rs  ollama.rs  vibe.rs
src/ui/: app.rs  events.rs  mod.rs  render.rs  theme.rs
src/watcher/: log_watcher.rs  mod.rs  shim.rs
